src/screens/App.css
/* Import Google font for titles */
@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap');

/* Your existing styles */
.App-title {
  font-family: 'Roboto', sans-serif;
  font-weight: 500;
  font-size: 1.6em;
  margin: 0;
  text-align: center;
}

.title-container {
  display: flex;
  align-items: center;
  cursor: pointer;
  position: absolute;
  left: 50%;
  transform: translateX(-50%);
}

.title-container svg {
  margin-left: 5px;
  font-size: 1.2em;
}

/* disable zoom on mobile */
@viewport {
  zoom: 1.0;
  width: device-width;
}

/* Add touch-action property to prevent zooming */
html, body {
  touch-action: pan-x pan-y;
  overflow: hidden;
  -webkit-overflow-scrolling: touch;
}

.App {
  display: flex;
  flex-direction: column;
  height: 100vh;
  overflow: hidden; /* Prevent scrolling on the main app container */
}

.App-header {
  min-height: 8vh;
  display: flex;
  align-items: center;
  justify-content: space-between;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-body {
  flex: 1;
  display: flex;
  flex-direction: column;
  overflow-y: auto;
  transition: height 0.3s ease;
}

.chat-container {
  flex: 1;
  display: flex;
  flex-direction: column;
  overflow-y: auto;
}

.App-footer {
  display: flex;
  justify-content: center;
  min-height: 10vh;
  padding-bottom: 15px;
}

.Nav-button {
  font-size: calc(10px + 2vmin);
}

.App-link {
  color: #61dafb;
}

/* New styles for futuristic Discord-inspired scrollbars */
/* For Webkit browsers like Chrome and Safari */
::-webkit-scrollbar {
  width: 8px;
  height: 8px;
}

::-webkit-scrollbar-track {
  background: rgba(32, 34, 37, 0.6);
  border-radius: 10px;
}

::-webkit-scrollbar-thumb {
  background: #7289da;
  border-radius: 10px;
  transition: background 0.2s ease-in-out;
}

::-webkit-scrollbar-thumb:hover {
  background: #5b6eae;
}

/* For Firefox */
* {
  scrollbar-width: thin;
  scrollbar-color: #7289da rgba(32, 34, 37, 0.6);
}

